--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2718,7 +2718,7 @@ h6 {
 .stricky-header .container {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
+  /* display: flex; */
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
